# sword-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
biblecli/: __init__.py  __main__.py  cli.py  download.py  refs.py  sword.py
scripts/: build_zipapp.sh
