[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "biblecli"
version = "0.1.0"
description = "Command-line Bible reader for SWORD modules"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pysword>=0.2.8",
]

[project.scripts]
biblecli = "biblecli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["biblecli*"]
